<resources>
    <string name="trtcvoiceroom_room_title">Room Id: %d</string>
    <string name="trtcvoiceroom_numer_format">%d watching</string>
    <string name="trtcvoiceroom_agree">Agree</string>
    <string name="trtcvoiceroom_warning_not_empty">The input field must not be empty</string>
    <string name="trtcvoiceroom_warning_room_name_too_long">Room name is too long</string>
    <string name="trtcvoiceroom_send">Send</string>
    <string name="trtcvoiceroom_main_title" formatted="false">%1s(%2d)</string>
    <string name="trtcvoiceroom_dialog_cancel">Cancel</string>
    <string name="trtcvoiceroom_toast_obtain_list_failure">Failed to get the list: %s</string>
    <string name="trtcvoiceroom_title_create_chat_room">Create Audio Chat Room</string>
    <string name="trtcvoiceroom_title_theme">Subject</string>
    <string name="trtcvoiceroom_hint_please_input_theme">Enter a subject</string>
    <string name="trtcvoiceroom_title_nickname">Nickname</string>
    <string name="trtcvoiceroom_hint_please_input_nickname">Enter a nickname</string>
    <string name="trtcvoiceroom_tv_need_agree">Require Your Consent to Speak</string>
    <string name="trtcvoiceroom_tv_sound_quality">Sound Quality</string>
    <string name="trtcvoiceroom_rb_normal">Standard</string>
    <string name="trtcvoiceroom_rb_music">Music</string>
    <string name="trtcvoiceroom_tv_create_chat_room">Create</string>
    <string name="trtcvoiceroom_msg_living_now_whether_to_exit_live">Are you sure you want to exit the live stream?</string>
    <string name="trtcvoiceroom_tv_invite_chat">Invite</string>
    <string name="trtcvoiceroom_toast_create">Failed to create the room</string>
    <string name="trtcvoiceroom_toast_create_live_room_failure">Failed to create room [%1$d]:%2$s</string>
    <string name="trtcvoiceroom_toast_owner_succeeded_in_occupying_the_seat">Seat taken successfully</string>
    <string name="trtcvoiceroom_toast_owner_failed_to_occupy_the_seat">Failed to take a seat [%1$d]:%2$s</string>
    <string name="trtcvoiceroom_tv_not_mute_audio">Unmute</string>
    <string name="trtcvoiceroom_tv_mute_audio">Mute</string>
    <string name="trtcvoiceroom_tv_please_offline">Mic Off</string>
    <string name="trtcvoiceroom_tv_invite_someone_to_chat">Mic On</string>
    <string name="trtcvoiceroom_tv_ban_seat">Block Seat</string>
    <string name="trtcvoiceroom_tv_not_ban_seat">Unblock Seat</string>
    <string name="trtcvoiceroom_toast_request_has_expired">Request expired</string>
    <string name="trtcvoiceroom_toast_accept_request_failure">Failed to accept the request: %d</string>
    <string name="trtcvoiceroom_msg_apply_for_chat"> requested to take seat %d</string>
    <string name="trtcvoiceroom_toast_already_someone_in_this_position">The seat is taken</string>
    <string name="trtcvoiceroom_toast_invitation_sent_successfully">Invitation sent</string>
    <string name="trtcvoiceroom_toast_refuse_to_chat">%s declined the mic-on request</string>
    <string name="trtcvoiceroom_toast_invite_to_chat_successfully">Placed %s in the seat</string>
    <string name="trtcvoiceroom_msg_click_to_chat">Tap to Speak</string>
    <string name="trtcvoiceroom_toast_exit_the_room_successfully">Left room</string>
    <string name="trtcvoiceroom_toast_enter_the_room_successfully">Entered room</string>
    <string name="trtcvoiceroom_toast_enter_the_room_failure">Failed to enter room[%1$d]:%2$s</string>
    <string name="trtcvoiceroom_toast_list_has_not_been_initialized">The seat list has not been initialized</string>
    <string name="trtcvoiceroom_msg_offline">Mic Off</string>
    <string name="trtcvoiceroom_toast_position_is_already_occupied">The seat is taken</string>
    <string name="trtcvoiceroom_tv_apply_for_chat">Request to Speak</string>
    <string name="trtcvoiceroom_toast_position_is_locked_cannot_apply_for_chat">Cannot take the seat as it is blocked</string>
    <string name="trtcvoiceroom_toast_offline_successfully">Mic turned off</string>
    <string name="trtcvoiceroom_toast_offline_failure">Failed to turn mic off: %s</string>
    <string name="trtcvoiceroom_toast_you_are_already_an_anchor">You are an anchor now</string>
    <string name="trtcvoiceroom_toast_the_room_is_not_ready">Room not ready</string>
    <string name="trtcvoiceroom_toast_application_has_been_sent_please_wait_for_processing">Your request has been sent. Please wait for reply from the anchor.</string>
    <string name="trtcvoiceroom_toast_failed_to_send_application">Failed to send request: %s</string>
    <string name="trtcvoiceroom_msg_invite_you_to_chat">The anchor invited you to take seat %d</string>
    <string name="trtcvoiceroom_msg_you_refuse_to_chat">You declined the mic-on request</string>
    <string name="trtcvoiceroom_msg_close_room">Room closed</string>
    <string name="trtcvoiceroom_toast_you_have_turned_on_the_microphone">Mic turned on</string>
    <string name="trtcvoiceroom_toast_you_have_turned_off_the_microphone">Mic turned off</string>
    <string name="trtcvoiceroom_toast_you_have_unmuted">Unmuted</string>
    <string name="trtcvoiceroom_toast_you_are_muted">Muted</string>
    <string name="trtcvoiceroom_toast_anchor_can_only_operate_it">Only an anchor can perform this operation.</string>
    <string name="trtcvoiceroom_toast_please_enter_content">Enter content</string>
    <string name="trtcvoiceroom_toast_sent_successfully">Sent</string>
    <string name="trtcvoiceroom_toast_sent_message_failure">Failed to send message [%1$d]</string>
    <string name="trtcvoiceroom_tv_information_acquisition">Getting room owner information</string>
    <string name="trtcvoiceroom_tv_the_anchor_is_not_online">The anchor is not online</string>
    <string name="trtcvoiceroom_tv_online">%1$s took seat %2$d</string>
    <string name="trtcvoiceroom_tv_offline">%1$s left seat %2$d</string>
    <string name="trtcvoiceroom_tv_the_position_has_muted">Seat %d muted</string>
    <string name="trtcvoiceroom_tv_the_position_has_unmuted">Seat %d unmuted</string>
    <string name="trtcvoiceroom_tv_the_owner_ban_this_position">Seat %d blocked</string>
    <string name="trtcvoiceroom_tv_the_owner_not_ban_this_position">Seat %d unblocked</string>
    <string name="trtcvoiceroom_tv_enter_room">%s entered</string>
    <string name="trtcvoiceroom_tv_exit_room">%s left the room</string>
    <string name="trtcvoiceroom_tv_seat_locked">The seat is blocked</string>
    <string name="trtcvoiceroom_tv_the_anchor_name_is_still_looking_up">Getting anchor name</string>
    <string name="trtcvoiceroom_tv_loading">Loading</string>
    <string name="trtcvoiceroom_tv_invite">Invite</string>
    <string name="trtcvoiceroom_tv_tools_test">Test</string>
    <string name="trtcvoiceroom_tv_tools_apply_tips"> requested to take seat 1</string>
    <string name="trtcvoiceroom_tv_tools_anchor_name_tips">ZXC</string>
    <string name="trtcvoiceroom_tv_tools_user_name_tips">Anchor</string>
    <string name="trtcvoiceroom_tv_please_select">Please Select</string>
    <string name="trtcvoiceroom_create_room_limit">The cloud communication account you are currently using has not activated the audio and video chat room function, and the number of chat rooms created exceeds the limit, please go to the Tencent Cloud official website to open [IM audio and video chat rooms]：https://cloud.tencent.com/document/product/269/11673</string>
    <string name="trtcvoiceroom_create_or_join_group_limit">The number of groups that a single user can create and join exceeds the limit, please purchase relevant packages, more details:https://cloud.tencent.com/document/product/269/11673</string>
    <string name="trtcvoiceroom_group_member_limit">The number of group members exceeds the limit, please refer to it, please purchase the relevant packages, more details:https://cloud.tencent.com/document/product/269/11673</string>
    <string name="trtcvoiceroom_start_talk">Let’s go</string>
    <string name="trtcvoiceroom_tv_online_no_name">took seat %d</string>
    <string name="trtcvoiceroom_tv_offline_no_name">left seat %d</string>
    <string name="trtcvoiceroom_me">Me</string>
    <string name="trtcvoiceroom_anchor_leave_room">The room will close after you leave. Leave?</string>
    <string name="trtcvoiceroom_btn_confirm">Confirm</string>
    <string name="trtcvoiceroom_btn_cancel">Cancel</string>
    <string name="trtcvoiceroom_room_id">room ID:%d</string>
    <string name="trtcvoiceroom_bgm_title">Background music</string>
    <string name="trtcvoiceroom_select_song">Select song</string>
    <string name="trtcvoiceroom_music_volume">Music volume</string>
    <string name="trtcvoiceroom_mic_volume">Voice volume</string>
    <string name="trtcvoiceroom_changer">Voice changing</string>
    <string name="trtcvoiceroom_reverb">Reverb</string>
    <string name="trtcvoiceroom_back">Back</string>
    <string name="trtcvoiceroom_sound_effects">Sound effect settings</string>
    <string name="trtcvoiceroom_sounds_adjustment">Music tone</string>
    <string name="trtcvoiceroom_request_expired">The request has expired</string>
    <string name="trtcvoiceroom_accept_failed">Failed to accept request</string>
    <string name="trtcvoiceroom_seat_unmuted">Seat unmuted</string>
    <string name="trtcvoiceroom_audience_leave_room">Are you sure you want to leave?</string>
    <string name="trtcvoiceroom_sound_audition">Music</string>
    <string name="trtcvoiceroom_put_on_your_headphones">Use earphones for better experience</string>
    <string name="trtcvoiceroom_copyright_sounds">Music Library ©</string>
    <string name="trtcvoiceroom_room_theme">Subject</string>
    <string name="trtcvoiceroom_room_theme_limit">Subject</string>
    <string name="trtcvoiceroom_regurgitation">In-ear Monitor</string>
    <string name="trtcvoiceroom_tools">Tools</string>
    <string name="trtcvoiceroom_lock">Block</string>
    <string name="trtcvoiceroom_unlock">Unblock</string>
    <string name="trtcvoiceroom_seat_mute">Mute</string>
    <string name="trtcvoiceroom_leave_seat">Mic Off</string>
    <string name="trtcvoiceroom_seat_closed">The seat is blocked</string>
    <string name="trtcvoiceroom_seat_already_mute">Cannot turn mic on as the seat is muted</string>
    <string name="trtcvoiceroom_bg_music_positive_happy">Happy</string>
    <string name="trtcvoiceroom_bg_music_sad_cinematic_piano">Sad Cinematic Piano</string>
    <string name="trtcvoiceroom_bg_music_wonder_world">Wonder World</string>
    <string name="trtcvoiceroom_create_theme">%s\'s room</string>
    <string name="trtcvoiceroom_audience">Audiences</string>
    <string name="trtcvoiceroom_welcome_visit">"Welcome to Audio Chat Room tryout, To quickly use the feature, visit "</string>
    <string name="trtcvoiceroom_welcome_visit_link">"https://cloud.tencent.com/document/product/647/45737"</string>
    <string name="trtcvoiceroom_tips_open_audio">Please turn on the microphone permission first</string>
    <string name="trtcvoiceroom_no_effect">No effect</string>
    <string name="trtcvoiceroom_audio_change_type_child">Naughty boy</string>
    <string name="trtcvoiceroom_audio_change_type_luoli">Little girl</string>
    <string name="trtcvoiceroom_audio_change_type_dashu">Middle-aged man</string>
    <string name="trtcvoiceroom_audio_change_type_kongling">Ethereal voice</string>
    <string name="trtcvoiceroom_audio_reverb_type_ktv">Karaoke room</string>
    <string name="trtcvoiceroom_audio_reverb_type_lowdeep">Deep</string>
    <string name="trtcvoiceroom_audio_reverb_type_heavymetal">Metallic</string>
    <string name="trtcvoiceroom_audio_reverb_type_hongliang">Resonant</string>
    <string name="trtcvoicerrom_need_request">Require owner\'s consent to speak</string>
    <string name="trtcvoiceroom_request_move_seat">Request move</string>
    <string name="trtcvoiceroom_tips_start_audio">Please turn on the microphone permission first</string>
</resources>