<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@drawable/trtcvoiceroom_bg_dialog"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <View
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/trtcvoiceroom_bottom_dialog_tip" />

    <LinearLayout
        android:id="@+id/audio_main_bgm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_bgm_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/trtcvoiceroom_bgm_title"
                android:textColor="@color/trtcvoiceroom_black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/trtcvoiceroom_back"
                android:textColor="@color/trtcvoiceroom_color_blue"
                android:textSize="16sp" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/audio_bgm_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/audio_main_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/music_effect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trtcvoiceroom_sound_effects"
                android:textColor="@color/trtcvoiceroom_black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/link_music"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="3dp"
                android:layout_toRightOf="@id/music_effect"
                android:src="@drawable/trtcvoiceroom_ic_link_music" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ll_music_audition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">

            <TextView
                android:id="@+id/music_audition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/trtcvoiceroom_sound_audition"
                android:textColor="@color/trtcvoiceroom_dark_black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/music_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toLeftOf="@id/switch_music_audition"
                android:layout_toRightOf="@id/music_audition"
                android:text="@string/trtcvoiceroom_put_on_your_headphones"
                android:textColor="@color/trtcvoiceroom_light_black"
                android:textSize="12sp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_music_audition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:thumb="@drawable/trtcvoiceroom_ic_switch"
                app:track="@drawable/trtcvoiceroom_ic_switch_track" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_select_bgm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_bgm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/trtcvoiceroom_copyright_sounds"
                android:textColor="@color/trtcvoiceroom_dark_black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/audio_btn_select_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/trtcvoiceroom_select_song"
                android:textColor="@color/trtcvoiceroom_light_black"
                android:textSize="16sp"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/iv_select_song"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/trtcvoiceroom_ic_arrow_right_black" />

            <TextView
                android:id="@+id/tv_actor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@color/trtcvoiceroom_dark_black"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_bgm_start_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="left|center_vertical"
                android:text="00:00"
                android:textColor="@color/trtcvoiceroom_dark_black"
                android:textSize="14sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_bgm_end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="left|center_vertical"
                android:text="/04:00"
                android:textColor="@color/trtcvoiceroom_dark_black"
                android:textSize="14sp"
                android:visibility="gone" />


            <ImageButton
                android:id="@+id/ib_audio_bgm_play"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="#00000000"
                android:gravity="center"
                android:src="@drawable/trtcvoiceroom_bgm_play"
                android:textColor="@color/trtcvoiceroom_dark_black"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_music_volume_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"
                android:text="@string/trtcvoiceroom_music_volume"
                android:textColor="@color/trtcvoiceroom_dark_black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/sb_bgm_volume"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="9"
                android:max="100"
                android:maxHeight="4dp"
                android:minHeight="4dp"
                android:progress="100"
                android:progressDrawable="@drawable/trtcvoiceroom_seekbar_progress_drawable"
                android:thumb="@drawable/trtcvoiceroom_seekbar_progress_thumb" />

            <TextView
                android:id="@+id/tv_bgm_volume"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dp"
                android:layout_weight="2"
                android:gravity="right"
                android:text="100"
                android:textColor="@color/trtcvoiceroom_dark_black"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"
                android:text="@string/trtcvoiceroom_mic_volume"
                android:textColor="@color/trtcvoiceroom_dark_black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/sb_mic_volume"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="9"
                android:max="100"
                android:maxHeight="4dp"
                android:minHeight="4dp"
                android:progress="100"
                android:progressDrawable="@drawable/trtcvoiceroom_seekbar_progress_drawable"
                android:thumb="@drawable/trtcvoiceroom_seekbar_progress_thumb" />

            <TextView
                android:id="@+id/tv_mic_volume"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dp"
                android:layout_weight="2"
                android:gravity="right"
                android:text="100"
                android:textColor="@color/trtcvoiceroom_dark_black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_music_tone_change"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"
                android:text="@string/trtcvoiceroom_sounds_adjustment"
                android:textColor="@color/trtcvoiceroom_dark_black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/sb_pitch_level"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="9"
                android:max="100"
                android:maxHeight="4dp"
                android:minHeight="4dp"
                android:progress="50"
                android:progressDrawable="@drawable/trtcvoiceroom_seekbar_progress_drawable"
                android:thumb="@drawable/trtcvoiceroom_seekbar_progress_thumb" />

            <TextView
                android:id="@+id/tv_pitch_level"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="3dp"
                android:layout_weight="2"
                android:gravity="right"
                android:text="0"
                android:textColor="@color/trtcvoiceroom_dark_black"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/trtcvoiceroom_changer"
            android:textColor="@color/trtcvoiceroom_dark_black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/audio_change_type_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:text="@string/trtcvoiceroom_reverb"
            android:textColor="@color/trtcvoiceroom_dark_black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/audio_reverb_type_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp" />

    </LinearLayout>

</LinearLayout>